test_apps/test-typechecker/fail/ac/ruleunknownvaruse.app
application test

access control rules

  rule page name(a:Bool)
  {
    a && b
  }